--- a/learning_log/learning_logs/templates/learning_logs/base.html
+++ b/learning_log/learning_logs/templates/learning_logs/base.html
@@ -13,23 +13,26 @@
 <body>
 
   <nav class="navbar navbar-expand-md navbar-light bg-light mb-4 border">
-    
+
     <a class="navbar-brand" href="{% url 'learning_logs:index'%}">Learning Log</a>
-    
+
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    
+
     <div class="collapse navbar-collapse" id="navbarCollapse">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
           <a class="nav-link" href="{% url 'learning_logs:topics'%}">Topics</a>
         </li>
       </ul>
-      <ul class="navbar-nav ml-auto">
+      <ul class="navbar-nav ml-auto align-items-center">
           {% if user.is_authenticated %}
             <li class="nav-item">
-              <span class="navbar-text">Hello, {{ user.username }}.</span>
+              <a href="{% url 'learning_logs:profile'%}">
+                <img style="width: 35px; border-radius: 100%;" src="https://api.dicebear.com/7.x/icons/svg?seed={{user.username}}" alt="profile-pic" />
+                <span class="navbar-text">Hello, {{ user.username }}.</span>
+              </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'users:logout' %}">Log out</a>
