--- a/learning_log/learning_logs/templates/learning_logs/index.html
+++ b/learning_log/learning_logs/templates/learning_logs/index.html
@@ -1,11 +1,33 @@
 {% extends "learning_logs/base.html" %}
 {% block page_header %}
+<div class="jumbotron">
+    <h1 class="display-3">Track your learning.</h1>
 
-    <div class="jumbotron">
-        <h1 class="display-3">Track your learning.</h1>
-            
-        <p class="lead">Make your own Learning Log, and keep a list of the topics you're learning about. Whenever you learn something new about a topic, make an entry summarizing what you've learned.</p>
-        
-        <a class="btn btn-lg btn-primary" href="{% url 'users:register' %}" role="button">Register &raquo;</a>
+    <p class="lead">Make your own Learning Log, and keep a list of the topics you're learning about. Whenever you learn something new about a topic, make an entry summarizing what you've learned.</p>
+
+    {% if not request.user.is_anonymous %}
+    <a class="btn btn-lg btn-primary" href="{% url 'learning_logs:new_topic' %}" role="button">Add a new Topic &raquo;</a>
+    {% else %}
+    <a class="btn btn-lg btn-primary" href="{% url 'users:register' %}" role="button">Register &raquo;</a>
+    {% endif %}
     </div>
+
+    <hr />
+
+{% if not request.user.is_anonymous %}
+<h1>Today's Topics</h1>
+
+<ul>
+    {% for topic in topics %}
+    <li><h3>
+        <a href="{% url 'learning_logs:topic' topic.id %}">{{ topic }}</a>
+    </h3></li>
+    {% empty %}
+        <li><h3>No topics have been added yet.</h3></li>
+    {% endfor %}
+</ul>
+
+<a class="btn btn-lg btn-primary" href="{% url 'learning_logs:topics' %}" role="button">View All Topics&raquo;</a>
+{% endif %}
+
 {% endblock page_header %}
