--- a/learning_log/learning_logs/templates/learning_logs/profile.html
+++ b/learning_log/learning_logs/templates/learning_logs/profile.html
@@ -3,14 +3,20 @@
 
 <p class="display-4">Update Profile</p>
 <hr />
-<form class="card-body" action="{% url 'learning_logs:update_profile' %}" method="post">
+<form class="card-body" action="{% url 'learning_logs:update_profile' %}" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <div class="row">
         <div class="col-2">
-            <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" alt="avatar" class="rounded-circle img-fluid" style="width: 150px;">
+            {% if request.user.image %}
+            <img src="{{request.user.image.url}}" alt="avatar" class="rounded-circle img-fluid"
+                style="width: 150px; height: 150px;">
+            {% else %}
+            <img src="https://placehold.co/600x400" alt="avatar" class="rounded-circle img-fluid"
+                style="width: 150px; height: 150px;">
+            {% endif %}
         </div>
         <div class="d-flex align-items-end">
-            <input name="profile_pic" type="file" placeholder="Upload a new profile pic" class="mb-3">
+            <input name="image" type="file" placeholder="Upload a new profile pic" class="mb-3">
         </div>
     </div>
 
@@ -20,7 +26,8 @@
             <p class="mb-0">First Name</p>
         </div>
         <div class="col-sm-9">
-            <input type="text" class="form-control" name="first_name" id="first_name" required value="{{request.user.first_name}}" placeholder="Enter your first name">
+            <input type="text" class="form-control" name="first_name" id="first_name" required
+                value="{{request.user.first_name}}" placeholder="Enter your first name">
         </div>
     </div>
     <hr>
@@ -29,7 +36,8 @@
             <p class="mb-0">Last Name</p>
         </div>
         <div class="col-sm-9">
-            <input type="text" class="form-control" name="last_name" id="last_name" required value="{{request.user.last_name}}" placeholder="Enter your last name">
+            <input type="text" class="form-control" name="last_name" id="last_name" required
+                value="{{request.user.last_name}}" placeholder="Enter your last name">
         </div>
     </div>
     <hr>
@@ -38,7 +46,8 @@
             <p class="mb-0">Email</p>
         </div>
         <div class="col-sm-9">
-            <input type="email" class="form-control" name="email" id="email" required value="{{request.user.email}}" placeholder="Enter your email">
+            <input type="email" class="form-control" name="email" id="email" required value="{{request.user.email}}"
+                placeholder="Enter your email">
         </div>
     </div>
     <hr>
