--- a/learning_log/learning_logs/templates/learning_logs/base.html
+++ b/learning_log/learning_logs/templates/learning_logs/base.html
@@ -30,7 +30,11 @@
           {% if user.is_authenticated %}
             <li class="nav-item">
               <a href="{% url 'learning_logs:profile'%}">
-                <img style="width: 35px; border-radius: 100%;" src="https://api.dicebear.com/7.x/icons/svg?seed={{user.username}}" alt="profile-pic" />
+                {% if user.image %}
+                  <img style="width: 35px; border-radius: 100%;" src="{{user.image.url}}" alt="profile-pic" />
+                {% else %}
+                  <img style="width: 35px; border-radius: 100%;" src="https://placehold.co/150x150" alt="profile-pic" />
+                {% endif %}
                 <span class="navbar-text">Hello, {{ user.username }}.</span>
               </a>
             </li>
