--- a/learning_log/learning_logs/templates/learning_logs/edit_entry.html
+++ b/learning_log/learning_logs/templates/learning_logs/edit_entry.html
@@ -5,7 +5,7 @@
 
 <p>Edit entry:</p>
 
-<form action="{% url 'learning_logs:edit_entry' entry.id %}" method='post'>
+<form action="{% url 'learning_logs:edit_entry' entry.id %}" method='post' enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
     <button name="submit">Save changes</button>
