--- a/learning_log/learning_logs/templates/learning_logs/new_topic.html
+++ b/learning_log/learning_logs/templates/learning_logs/new_topic.html
@@ -3,7 +3,7 @@
 {% block content %}
 <p>Add a new topic:</p>
 
-<form action="{% url 'learning_logs:new_topic' %}" method='post'>
+<form action="{% url 'learning_logs:new_topic' %}" method='post' enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
     <button name="submit">Add topic</button>
